<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_logreg"
    tools:context=".ui.onboarding.LoginFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_logo_name"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    vivo 400 dp margin top-->
    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="250dp"
        android:fontFamily="@font/google_sans_bold"
        android:text="Sign In"
        android:textColor="@color/blue_dark"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo_name" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_login"
        android:layout_width="364dp"
        android:layout_height="110dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_email_log"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_email_log"
                app:layout_constraintBottom_toBottomOf="@id/v_1"
                app:layout_constraintEnd_toStartOf="@id/til_email_log"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email_log"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:hint="Email"
                android:layout_marginTop="8dp"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="0dp"
                app:layout_constraintBottom_toTopOf="@id/v_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_email_log"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email_log"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/v_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_line"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_pass_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_pass_log"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/iv_email_log"
                app:layout_constraintTop_toTopOf="@id/v_1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_pass_log"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ellipsize="start"
                android:gravity="center_horizontal"
                android:hint="Password"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="0dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/til_email_log"
                app:layout_constraintTop_toTopOf="@id/v_1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_pass_log"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="358dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/cv_login"
        app:layout_constraintStart_toStartOf="parent"
        android:text="Login"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="or"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_login_firebase"
        android:layout_width="368dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/tv_or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:text="No account yet?"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/btn_login_firebase"
        app:layout_constraintEnd_toStartOf="@id/tv_register"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Register here"
        android:layout_marginStart="4dp"
        android:textColor="@color/blue_dark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_no_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_no_account" />


</androidx.constraintlayout.widget.ConstraintLayout>