...
    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pc_result_feces"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginTop="12dp"
            android:isScrollContainer="false"
            android:layoutMode="opticalBounds"
            android:outlineProvider="background"
...
